CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(PhaseTransitions CXX)


SET(PhaseTransition_VERSION "0.2")

find_package(GSL 2.1 REQUIRED)
find_package(Boost 1.40 REQUIRED math_tr1l)
include_directories(include ${GSL_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -DVERBOSE=0")

add_subdirectory(src)
