CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

add_executable(HermiteInterpolationTest ../src/HermiteInterpolation.cpp check_HI.cpp)
add_executable(PhaseTest ../src/Phases.cpp ../src/TraceMin.cpp ../src/VTypes.cpp check_Phase.cpp)
add_executable(TraceTest ../src/Phases.cpp ../src/TraceMin.cpp ../src/VTypes.cpp check_traceMin.cpp)
add_executable(TraceMultiTest ../src/Phases.cpp ../src/TraceMin.cpp ../src/VTypes.cpp check_traceMultiMin.cpp)
add_executable(TcTest ../src/Phases.cpp ../src/TraceMin.cpp ../src/VTypes.cpp check_findTc.cpp)
add_executable(LocalTest ../src/Phases.cpp ../src/TraceMin.cpp ../src/VTypes.cpp check_ApproxLocalMin.cpp)

target_link_libraries(PhaseTest ${GSL_LIBRARIES})
target_link_libraries(TraceTest ${GSL_LIBRARIES})
target_link_libraries(TraceMultiTest ${GSL_LIBRARIES})
target_link_libraries(TcTest ${GSL_LIBRARIES})
target_link_libraries(LocalTest ${GSL_LIBRARIES})

install(TARGETS HermiteInterpolationTest DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS PhaseTest DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS TraceTest DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS TraceMultiTest DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS TcTest DESTINATION ${PROJECT_BINARY_DIR}/bin)
install(TARGETS LocalTest DESTINATION ${PROJECT_BINARY_DIR}/bin)